fixed logo letter spacing

--- a/assets/less/modules/pageHeader.less
+++ b/assets/less/modules/pageHeader.less
@@ -14,9 +14,9 @@
     letter-spacing: 0.3em;
   }
   #siteId {
-    height: 30px;
-    width: 30px;
-    margin: 0 auto 5px;
+    height: 25px;
+    width: 25px;
+    margin: 0 auto 10px;
   }
   ul {
     float: right;
@@ -26,7 +26,6 @@
             text-transform: uppercase;
             letter-spacing: 0.1em;
       &.active {
-        //        border-bottom: 1px solid #000;
         font-weight: bold;
       }
     }
